cmake_minimum_required(VERSION 3.12)

project(homework1 VERSION 0.0.1$ENV{TRAVIS_BUILD_NUMBER})

SET(HOMEWORK1_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(PROCESSED_HEADERS_DIR ${CMAKE_CURRENT_BINARY_DIR}/include)

configure_file(include/version.h.in ${PROCESSED_HEADERS_DIR}/version.h)

add_subdirectory(src)
add_subdirectory(tests)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT motoroller95@gmail.com)

include(CPack)
